# serializer version: 1
# name: TestRefreshReporter.test_ansi_codes_in_table_name
  '''
  UP-TO-DATE        0       0 DB.SCHEMA.RED_TABLE
  
  1 Dynamic Table refreshed successfully.
  ================================================================================
  
  '''
# ---
# name: TestRefreshReporter.test_empty_cursor
  '''
  No data.
  
  '''
# ---
# name: TestRefreshReporter.test_large_numbers
  '''
  REFRESHED     +1.5B   -999M DB.SCHEMA.BILLIONS
  REFRESHED     +2.5T   -100B DB.SCHEMA.TRILLIONS
  
  2 Dynamic Tables refreshed successfully.
  ================================================================================
  
  '''
# ---
# name: TestRefreshReporter.test_missing_statistics
  '''
  UNKNOWN                     DB.SCHEMA.NO_STATS
  
  1 Refresh failed.
  ================================================================================
  
  '''
# ---
# name: TestRefreshReporter.test_missing_table_name
  '''
  REFRESHED      +100       0 UNKNOWN
  
  1 Dynamic Table refreshed successfully.
  ================================================================================
  
  '''
# ---
# name: TestRefreshReporter.test_mixed_success_and_failure
  '''
  REFRESHED       +10       0 DB.SCHEMA.OK_REFRESHED
  UP-TO-DATE        0       0 DB.SCHEMA.OK_UP_TO_DATE
  UNKNOWN                     DB.SCHEMA.FAILED
  
  2 Dynamic Tables refreshed successfully.
  1 Refresh failed.
  ================================================================================
  
  '''
# ---
# name: TestRefreshReporter.test_multiple_tables_mixed_status
  '''
  REFRESHED      +50k     -1k DB.SCHEMA.TABLE_A
  UP-TO-DATE        0       0 DB.SCHEMA.TABLE_B
  UP-TO-DATE        0       0 DB.SCHEMA.TABLE_C
  REFRESHED     +999k    -500 DB.SCHEMA.TABLE_D
  
  4 Dynamic Tables refreshed successfully.
  ================================================================================
  
  '''
# ---
# name: TestRefreshReporter.test_no_dynamic_tables
  '''
  
  No dynamic tables found in the project.
  ================================================================================
  
  '''
# ---
# name: TestRefreshReporter.test_only_deletions
  '''
  REFRESHED         0     -3k DB.SCHEMA.DELETES_ONLY
  
  1 Dynamic Table refreshed successfully.
  ================================================================================
  
  '''
# ---
# name: TestRefreshReporter.test_only_insertions
  '''
  REFRESHED       +5k       0 DB.SCHEMA.INSERTS_ONLY
  
  1 Dynamic Table refreshed successfully.
  ================================================================================
  
  '''
# ---
# name: TestRefreshReporter.test_single_refreshed_table
  '''
  REFRESHED     +1.5k    -200 DB.SCHEMA.CUSTOMERS
  
  1 Dynamic Table refreshed successfully.
  ================================================================================
  
  '''
# ---
# name: TestRefreshReporter.test_single_up_to_date_table
  '''
  UP-TO-DATE        0       0 DB.SCHEMA.ORDERS
  
  1 Dynamic Table refreshed successfully.
  ================================================================================
  
  '''
# ---
